kubernetes/concourse/manifests/service-concourse-web.yml
apiVersion: v1
kind: Service
metadata:
  name: concourse-web
  namespace: ci
  labels:
    app: concourse-web
spec:
  selector:
    app: concourse-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: ui
  - protocol: TCP
    port: 8080
    targetPort: http
    name: cluster-http
  - protocol: TCP
    port: 2222
    targetPort: tsa
    name: cluster-tsa
