kubernetes/concourse/manifests/ingress-concourse-web.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: concourse-web
  namespace: ci
spec:
  rules:
  - host: concourse.domain.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: concourse-web
          servicePort: 80
